--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,11 @@ android {
             abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
         }
         multiDexEnabled true
+        manifestPlaceholders = [
+                JPUSH_PKGNAME : applicationId,
+                JPUSH_APPKEY : "07c6c492b77fac331c130b9d", //JPush上注册的包名对应的appkey.
+                JPUSH_CHANNEL : "developer-default", //暂时填写默认值即可.
+        ]
     }
     dexOptions {
         jumboMode = true
@@ -58,6 +63,7 @@ android {
         checkReleaseBuilds false
         abortOnError false
     }
+
 }
 
 dependencies {
@@ -87,4 +93,6 @@ dependencies {
     implementation 'com.github.ihsg:PatternLocker:2.1.0'
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.gyf.barlibrary:barlibrary:2.1.9'
+    implementation 'cn.jiguang.sdk:jpush:3.1.1'  // 此处以JPush 3.1.1 版本为例。
+    implementation 'cn.jiguang.sdk:jcore:1.1.9'  // 此处以JCore 1.1.9 版本为例。
 }
