--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -189,11 +189,25 @@
         <meta-data
             android:name="JPUSH_APPKEY"
             android:value="07c6c492b77fac331c130b9d" />
+        <activity
+            android:name="com.tencent.bugly.beta.ui.BetaActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize|locale"
+            android:theme="@android:style/Theme.Translucent" />
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="${applicationId}.fileProvider"
+            android:exported="false"
+            android:grantUriPermissions="true">
 
+        <meta-data
+            android:name="android.support.FILE_PROVIDER_PATHS"
+            android:resource="@xml/file_paths"/>
+        </provider>
         <activity android:name=".MainActivity" />
         <activity
             android:name=".zxing.CaptureActivity"
             android:screenOrientation="portrait" />
+
         <activity android:name=".activitys.MyReceiptCodeActivity" />
         <activity android:name=".activitys.SetLockScreenPwdActivity" />
         <activity android:name=".activitys.StartPaymentActivity" />
@@ -211,7 +225,8 @@
         <activity android:name=".activitys.BillDescActivity" />
         <activity android:name=".activitys.InPutAddressActivity" />
         <activity android:name=".activitys.EntryOtherActivity" />
-        <activity android:name=".activitys.ChangePayPwdActivity"></activity>
+        <activity android:name=".activitys.ChangePayPwdActivity" />
+        <activity android:name=".activitys.PaySuccessActivity"></activity>
     </application>
 
 </manifest>
