--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,14 @@ package="zz.hjzn.hjwallet">
     android:roundIcon="@mipmap/logo"
     android:supportsRtl="true"
     android:theme="@style/AppTheme">
+    <!-- 高德 -->
+    <service android:name="com.amap.api.location.APSService" />
+
+    <meta-data
+        android:name="com.amap.api.v2.apikey"
+        android:value="68e023759ac9072a5f197177c9f3f69c">
+        //开发者申请的key</meta-data>
+
     <provider
         android:name="android.support.v4.content.FileProvider"
         android:authorities="zz.hjzn.hjwallet.fileProvider"
@@ -234,7 +242,11 @@ package="zz.hjzn.hjwallet">
     </activity>
     <activity android:name="zz.hjzn.hjwallet.activitys.AboutWeActivity"></activity>
     <activity android:name="zz.hjzn.hjwallet.activitys.ShopActivity"></activity>
+    <activity android:name="zz.hjzn.hjwallet.activitys.ParitiesActivity"></activity>
+    <activity android:name="zz.hjzn.hjwallet.activitys.ParitiesListAcitivity"></activity>
+    <activity android:name="zz.hjzn.hjwallet.activitys.WebActivity"></activity>
+    <activity android:name="zz.hjzn.hjwallet.NewsActivity"></activity>
+    <activity android:name="zz.hjzn.hjwallet.activitys.XiaohuaActivity"></activity>
+    <activity android:name="zz.hjzn.hjwallet.activitys.StartActivity"></activity>
 </application>
-
 </manifest>
-
